<resources>
    <string name="app_name">享包车</string>
    <string name="instant_register">快速注册</string>
    <string name="account_registered">已有账号？</string>
    <string name="hint_telephone_number_login">手机号登录</string>
    <string name="forget_password"><u>忘记密码？</u></string>
    <string name="hint_input_account">请输入手机号</string>
    <string name="hint_input_password">请输入登录密码</string>
    <string name="hint_set_password">请设置登录密码</string>
    <string name="hint_input_captcha">请输入验证码</string>
    <string name="fetch_captcha">获取验证码</string>
    <string name="hint_input_new_password">请输入新密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="already_read_accept">我已阅读并接受</string>
    <string name="xbc_agreement"><u>《享包车平台会员协议》</u></string>
    <string name="city">城市</string>
    <string name="hello_everyone">大家好</string>
    <string name="wait_a_moment">请稍后</string>
    <string name="free_ride">顺风车</string>
    <string name="passengers_num">乘客人数</string>
    <string name="hint_passengers_num">请输入乘客人数</string>
    <string name="start_time">出发时间</string>
    <string name="hint_start_time">请选择出发时间</string>
    <string name="start_city">出发城市</string>
    <string name="hint_start_city">请选择出发城市</string>
    <string name="dest_city">目的城市</string>
    <string name="hint_dest_city">请选择目的城市</string>
    <string name="rapid_research">闪电搜</string>
    <string name="hint_tel_number">手机号码</string>
    <string name="pro_deposit">预付金额</string>
    <string name="basic_info">基本信息</string>
    <string name="invoice_info">发票信息</string>
    <string name="insurance_info">保险信息</string>
    <string name="cost_detail">费用详情</string>
    <string name="sum_include_tax">含税总额：</string>
    <string name="deposit">订金：</string>
    <string name="insurance">保险：</string>
    <string name="member_privilege">会员特权</string>
    <string name="payment_way">支付方式</string>
    <string name="payment_way_alipay">支付宝支付</string>
    <string name="payment_way_weixin">微信支付</string>
    <string name="accept_license">我已阅读并接受<u>《享包车平台会员协议》</u></string>
    <string name="alipay_pay_off">支付宝付款700元</string>
    <string name="qv_add">＋</string>
    <string name="qv_remove">一</string>
    <string name="public_account_transfer_title">公账转账须知</string>
    <string name="public_account_transfer_content">享包车平台支持企业客户进行对公转账，预付金额收到后，客服将第一时间与您联系。\n\n公司名称：厦门创狐网络科技有限公司\n开户行：农业银行厦门金鸡亭支行\n帐号：40311001040006019
   </string>
    <string name="book_cars">配驾包车</string>
    <string name="template">样\n式</string>
    <string name="one_way_trip_title">单\n\n程</string>
    <string name="one_way_trip_temp">如：6月13日早上9点，我们从厦门SM城市广场出发，去国际邮轮中心码头坐船去鼓浪屿，行程结束。</string>
    <string name="round_trip_title">往\n\n返</string>
    <string name="round_trip_temp">如：6月22日早上10点我们从厦门高崎机场出发到会展中心开会，下午6点会议结束后，返回高崎机场，行程结束。</string>
    <string name="one_day_trip_title">单\n\n日</string>
    <string name="one_day_trip_temp">如：6月18日早上10点我们从杭州文二西路67号出发去西湖，途径雷峰塔、苏堤，灵隐寺，晚饭后回程，行程结束。</string>
    <string name="mutil_day_trip_title">多\n\n日</string>
    <string name="mutil_day_trip_temp">如：6月12日9点我们从杭州西溪七天酒店前往千岛湖；13日10点从千岛湖出发去龙泉山，傍晚回杭州，行程结束。</string>
    <string name="please_choose_your_needs">请选择合适的用车类型</string>
    <string name="one_day_trip">单日用车</string>
    <string name="start_date">出发日期</string>
    <string name="hint_start_date">请选择出发日期</string>
    <string name="default_intraday_date">03-12</string>
    <string name="hint_intraday_trip_info">请输入当日用车情况</string>
    <string name="mutil_day_trip">多日用车</string>
    <string name="finish_date">结束日期</string>
    <string name="hint_finish_date">请选择结束日期</string>
    <string name="trip_detail_info">详细行程</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
    <string name="one_way_trip">单程用车</string>
    <string name="start_area">出发地</string>
    <string name="dest_area">目的地</string>
    <string name="hint_area">请输入详细地址</string>
    <string name="hint_passby_area">途径地点</string>
    <string name="add_passby_area">新增途径地点</string>
    <string name="round_trip">往返用车</string>
    <string name="back_time">返程时间</string>
    <string name="hint_back_time">请选择返程时间</string>
    <string name="hint_contact">联系人</string>
    <string name="hint_contact_telephone">手机号码</string>
    <string name="common_use">常用</string>
    <string name="passenger_num">人数</string>
    <string name="hint_passenger_num">几人</string>
    <string name="car_num">车辆</string>
    <string name="hint_car_num">几辆</string>
    <string name="seats">座位</string>
    <string name="seat">座</string>
    <string name="invoice">发票</string>
    <string name="invoice_common">增值税普通发票</string>
    <string name="invoice_common_hint">（用车完后寄出）</string>
    <string name="hint_invoice">发票将产生7%税点</string>
    <string name="remarks">备注</string>
    <string name="hint_remarks">备注用车信息</string>
    <string name="order_detail">订单详情</string>
    <string name="trip_info">行程信息</string>
    <string name="send_needs_wait_offers">"我们正在将您的需求发送给司机，\n司机将为您报价\n"</string>
    <string name="wait_for_offer">等待报价</string>
    <string name="person">个人</string>
    <string name="default_nickname">No.66</string>
    <string name="default_telephone_num">1358****294</string>
    <string name="default_credit_value">信用值6分</string>
    <string name="my_message">我的消息</string>
    <string name="make_money">我要赚钱</string>
    <string name="my_red_package">我的红包</string>
    <string name="general_info">常用信息</string>
    <string name="privilege_auth">特权认证</string>
    <string name="invite_reward">邀请有奖</string>
    <string name="feedback">反馈建议</string>
    <string name="help_center">帮助中心</string>
    <string name="fleet_settled">车队入驻</string>
    <string name="agent_description">
        1、点击我的-我要赚钱，首次打开，请先按提示进行注册。

\n\n2、注册审核通过后，进入代理商首页，点击招募，分享二维码到朋友圈、空间、微博等社交平台或者直接推送给好友进行分享。

\n\n3、当您的好友通过该二维码下载APP，将自动成为您的伙伴，他通过享包车APP完成旅程，则每次旅程花费额度费用的1.5%将作为您的收益。

\n\n4、我的伙伴：查询当前您的伙伴人数以及伙伴的收益详情。

\n\n5、收益明细：查看自身的收益记录。

\n\n6、闪电提现：随时随地提取现金到您的支付宝/微信账户。\n
    </string>
    <string name="agent">代理商</string>
    <string name="become_agent">成为代理商</string>
    <string name="close">关闭</string>
    <string name="name">姓名</string>
    <string name="hint_real_name">请输入真实姓名</string>
    <string name="telephone_num">手机号</string>
    <string name="hint_telephone_num">默认显示注册手机号</string>
    <string name="job">职业</string>
    <string-array name="jobs">
        <item>学生</item>
        <item>企业</item>
        <item>自由职业</item>
        <item>政府/事业单位</item>
    </string-array>
    <string name="under_check">审核中</string>
    <string name="pass_check">审核通过</string>
    <string name="submit_auth">提交认证</string>
    <string name="rmb_unit">元</string>
    <string name="people_unit">人</string>
    <string name="recruit">招 募 </string>
    <string name="incomes_detail">收益明细</string>
    <string name="my_friends">我的伙伴</string>
    <string name="flash_atm">闪电提现</string>
    <string name="add">添加</string>
    <string name="hint_invoice_header">请输入发票抬头</string>
    <string name="hint_receiver">收件人</string>
    <string name="hint_telephone_number">电话号码</string>
    <string name="save">保存</string>
    <string name="import_from_contacts">从通讯录导入</string>
    <string name="hint_tel_num">手机号</string>
    <string name="hint_receiver_address">收件地址</string>
    <string name="privilege_auth_going">正在认证中</string>
    <string name="privilege_auth_again">重新认证</string>
    <string name="loading">加载中</string>
    <string name="government_institute">政府/事业单位</string>
    <string name="travel_agency">旅行社</string>
    <string name="company">企业</string>
    <string name="student">学生</string>
    <string name="auth_description">您正在进行特权认证，请完成以下内容后提交认证，尊享会员特权。</string>
    <string name="input_company_info">填写企业信息</string>
    <string name="upload_business_license">上传营业执照</string>
    <string name="input_proposer_info">填写申请人信息</string>
    <string name="server_requesting">服务器请求中......</string>
    <string name="auth">认证</string>
    <string name="input">填写</string>
    <string name="info">信息</string>
    <string name="upload">上传</string>
    <string name="already_input">已填写</string>
    <string name="already_upload">已上传</string>
    <string name="already_input_proposer_info">已填写申请人信息</string>
    <string name="name_title">名称</string>
    <string name="hint_input">请输入</string>
    <string name="edit">修改</string>
    <string name="company_name">企业名称</string>
    <string name="hint_input_company_name">请输入企业名称</string>
    <string name="input_legal_personality">输入法人代表</string>
    <string name="hint_input_legal_personality">请输入法人代表</string>
    <string-array name="industry_type">
        <item>农/林/牧/渔</item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
    </string-array>
    <string name="unity_society_credit_code">统一社会信用代码</string>
    <string-array name="contents_ENT_PHOTO">
        <item>上传营业执照图片</item>
        <item>\n\n请在营业执照复印件上，按照如下要求完成并拍照上传。\n注：手写"仅用于享包车认证"，并在复印件上加盖红色公章。</item>
    </string-array>
    <string name="take_photo_again_or_upload">重新拍照/上传</string>
    <string-array name="contents_GOV_PHOTO">
        <item>上传组织机构代码证图片</item>
        <item>\n\n请在组织机构代码证复印件上，按照如下要求完成并拍照上传。\n注：手写"仅用于享包车认证"，并在复印件上加盖红色公章。</item>
    </string-array>
    <string-array name="contents_TRAVERL_PHOTO">
        <item>上传营业执照图片</item>
        <item>\n\n请在营业执照复印件上，按照如下要求完成并拍照上传。\n注：手写"仅用于享包车认证"，并在复印件上加盖红色公章。</item>
    </string-array>
    <string-array name="contents_STU_PHOTO">
        <item>上传学生证图片</item>
        <item>\n\n图片信息必须包含学校名称和个人姓名及照片。</item>
    </string-array>
    <string-array name="colors">
        <item>75,75,75</item>
        <item>150,150,150</item>
    </string-array>
    <string-array name="font">
        <item>15</item>
        <item>13</item>
    </string-array>
    <string name="proposer_info">申请人信息</string>
    <string name="proposer_name">申请人姓名</string>
    <string name="id_card_number">身份证号码</string>
    <string name="upload_handed_id_card_photo">上传手持身份证件图片</string>
    <string name="id_card_photo_description">身份证各项信息及头像均清晰可见，持证人需免冠，面部无遮拦，五官清晰可见，须露出手肘。</string>
    <string name="red_package">红包</string>
    <string name="already_invited">已邀请(人)</string>
    <string name="already_succeed_cost">已成功消费(人)</string>
    <string name="invite_reward_descrip">
        \t规则说明\n
        \t被邀请者在分享链接通过手机号码成功领取红包，并且注下载并登录软件算邀请成功。\n\n
        \t邀请成功定义\n
        \t被邀请用户须为“享包车包新用户”，并下载享包App。\n\n
        \t什么是“享包车新用户”\n
        \t享包车新用户指未使用过享包车的用户。\n\n
        \t什么是成功消费\n
        \t使用享包车App成功完成一笔交易。\n\n
        \t奖励规则\n
        \t若被邀请用户注册并登录享包车App，被邀请人可获得新用户红包礼包。邀请人将获得5元包奖励（可在红包里查看）。\n\n
        \t奖励查询\n
        \t被邀请人的奖励可在我的-我的红包内查看。邀请人的奖励可以在我的-我的红包查看。\n\n
    </string>
    <string name="ride_type">用车类型</string>
    <string name="one_day_ride">单日用车</string>
    <string name="multi_day_ride">多日用车</string>
    <string name="function_type">功能类型</string>
    <string name="offer_price">报价</string>
    <string name="payment">支付</string>
    <string name="others">其他</string>
    <string name="feedback_advice">反馈建议</string>
    <string name="feedback_info">反馈内容</string>
    <string name="hint_feedback_info">请输入反馈内容</string>
    <string name="please_choose_ride_type">请选择用车类型项</string>
    <string name="please_choose_funtion_type">请选择功能类型项</string>
    <string name="submit">提交</string>
    <string name="ride_guide">用车指南</string>
    <string name="digits_num">0123456789</string>
    <string name="digits_pwd">._@0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ/*-+`!$#%</string>
    <string name="dialog_email_change_tv">更换邮箱后，新协议书将发送该邮箱</string>
    <string name="dialog_email_account">201333333@qq.com</string>
    <string name="btn_ok">确认</string>
</resources>