<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/login_bg_img"
    android:orientation="vertical">

    <com.lvchehui.www.xiangbc.view.TitleView
        android:id="@+id/title_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <com.lvchehui.www.xiangbc.view.EditText.EditTextWithDel
        android:id="@+id/account_et"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:digits="@string/digits_num"
        android:gravity="center|left"
        android:hint="@string/hint_input_account"
        android:inputType="phone"
        android:maxLength="11"
        android:maxLines="1"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:singleLine="true"
        style="@style/HintEt"
        />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"
        android:gravity="center_vertical"
        android:paddingRight="10dp"
        android:background="@drawable/et_bg_hint"
        android:orientation="horizontal"
        android:weightSum="5">

        <EditText
            android:id="@+id/captcha_et"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@null"
            android:layout_marginRight="10dp"
            android:digits="@string/digits_num"
            android:gravity="center|left"
            android:inputType="number"
            android:maxLength="4"
            android:maxLines="1"
            android:paddingBottom="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:singleLine="true"
            android:hint="@string/hint_input_captcha"
            style="@style/HintEt"
            />
        <!--android:layout_weight="3"-->

        <com.lvchehui.www.xiangbc.view.button.ButtonForCaptcha
            android:id="@+id/captcha_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="96dp"
            android:minHeight="40dp"
            android:gravity="center"
            android:layout_alignParentRight="true"
            android:text="@string/fetch_captcha"
            android:padding="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            style="@style/BottomBtn"
           />
        <!--android:layout_weight="2"-->
    </RelativeLayout>

    <com.lvchehui.www.xiangbc.view.EditText.EditTextForPwd
        android:id="@+id/password_et"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:digits="@string/digits_pwd"
        android:gravity="center|left"
        android:hint="@string/hint_set_password"
        android:inputType="textPassword"
        android:maxLength="16"
        android:maxLines="1"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        style="@style/HintEt"
        />

    <!--<com.lvchehui.www.xiangbc.view.processbutton.imi.ActionProcessButton
        android:id="@+id/instant_register_tv"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/register"
        style="@style/BottomBtn"
        custom:pb_textComplete="@string/Success"
        custom:pb_textProgress="@string/Loading"
        />-->

    <!--custom:pb_colorComplete="@color/title_bg_color"
        custom:pb_colorNormal="@color/transparent"
        custom:pb_colorPressed="@color/transparent"
        custom:pb_colorProgress="@color/button_progress"-->

    <TextView
        android:id="@+id/instant_register_tv"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/register"
        style="@style/BottomBtn"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:gravity="center"
        >
        <TextView
            android:id="@+id/read_and_accept_tv"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/already_read_accept"
            android:textSize="@dimen/text_middle_size"
            android:textColor="@color/white"
            android:gravity="center"
            android:drawableLeft="@mipmap/register_agree"
            android:layout_gravity="center_horizontal" />
        <TextView
            android:id="@+id/agreement_tv"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:textSize="@dimen/text_middle_size"
            android:textColor="@color/white"
            android:gravity="center"
            android:text="@string/xbc_agreement"
            />
    </LinearLayout>

</LinearLayout>
