<LinearLayout
    android:id="@+id/ll_passenger_num"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_white_gray"
    android:clickable="true"
    android:focusable="true"
    android:gravity="center_vertical"
    android:minHeight="48.0dip"
    android:paddingLeft="10.0dip"
    android:paddingRight="10.0dip"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/item_contact_icon" />

    <TextView
        android:layout_width="0.0dip"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10.0dip"
        android:layout_weight="1.0"
        android:text="@string/passengers_num"
        android:textColor="@color/text_default_lightblack"
        android:textSize="15.0sp" />

    <com.lvchehui.www.xiangbc.view.EditText.EditTextWithDel
        android:id="@+id/tv_passenger_num"
        style="@style/edittext_clear"
        android:digits="@string/digits_num"
        android:inputType="number"
        android:hint="@string/hint_passengers_num"
        />

    <!--<TextView
        android:id="@+id/tv_passenger_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLength="2"
        android:hint="@string/hint_passengers_num"
        android:gravity="center|right"
        android:textSize="@dimen/text_default_size"
        android:textColor="@color/text_default_color"
        />-->
</LinearLayout>